load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "bep2prom_lib",
    srcs = ["main.go"],
    importpath = "github.com/ldx/bep2prom/cmd/bep2prom",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/server",
        "@com_github_jessevdk_go_flags//:go-flags",
        "@go_googleapis//google/devtools/build/v1:build_go_proto",
        "@org_golang_google_grpc//:go_default_library",
    ],
)

go_binary(
    name = "bep2prom",
    embed = [":bep2prom_lib"],
    visibility = ["//visibility:public"],
)
