load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "build_event_stream_proto",
    srcs = ["build_event_stream.proto"],
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/bazel_protobuf/command_line:command_line_proto",
        "//pkg/bazel_protobuf/failure_details:failure_details_proto",
        "//pkg/bazel_protobuf/invocation_policy:blaze_invocation_policy_proto",
        "@com_google_protobuf//:duration_proto",
        "@com_google_protobuf//:timestamp_proto",
    ],
)

go_proto_library(
    name = "build_event_stream_go_proto",
    importpath = "github.com/ldx/bep2prom/pkg/build_event_stream",
    proto = ":build_event_stream_proto",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/bazel_protobuf/command_line",
        "//pkg/bazel_protobuf/failure_details",
        "//pkg/bazel_protobuf/invocation_policy",
    ],
)

go_library(
    name = "build_event_stream",
    srcs = ["build_event_stream.go"],
    embed = [":build_event_stream_go_proto"],
    importpath = "github.com/ldx/bep2prom/pkg/build_event_stream",
    visibility = ["//visibility:public"],
)
