load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "server",
    srcs = ["server.go"],
    importpath = "github.com/ldx/bep2prom/pkg/server",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/build_event_stream",
        "//pkg/metrics",
        "@go_googleapis//google/devtools/build/v1:build_go_proto",
        "@org_golang_google_protobuf//types/known/emptypb",
    ],
)

go_test(
    name = "server_test",
    srcs = ["server_test.go"],
    embed = [":server"],
)
