load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "blaze_proto",
    srcs = ["action_cache.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "blaze_go_proto",
    importpath = "github.com/ldx/bep2prom/pkg/bazel_protobuf/action_cache",
    proto = ":blaze_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "action_cache",
    embed = [":blaze_go_proto"],
    importpath = "github.com/ldx/bep2prom/pkg/bazel_protobuf/action_cache",
    visibility = ["//visibility:public"],
)
