load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "blaze_proto",
    srcs = ["android_deploy_info.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "blaze_go_proto",
    importpath = "github.com/ldx/bep2prom/pkg/bazel_protobuf/android_deploy_info",
    proto = ":blaze_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "android_deploy_info",
    embed = [":blaze_go_proto"],
    importpath = "github.com/ldx/bep2prom/pkg/bazel_protobuf/android_deploy_info",
    visibility = ["//visibility:public"],
)
