load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "bazel_flags_proto",
    srcs = ["bazel_flags.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "bazel_flags_go_proto",
    importpath = "github.com/ldx/bep2prom/pkg/bazel_protobuf/bazel_flags",
    proto = ":bazel_flags_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "bazel_flags",
    embed = [":bazel_flags_go_proto"],
    importpath = "github.com/ldx/bep2prom/pkg/bazel_protobuf/bazel_flags",
    visibility = ["//visibility:public"],
)
