load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "builtin_proto",
    srcs = ["builtin.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "builtin_go_proto",
    importpath = "github.com/ldx/bep2prom/pkg/bazel_protobuf/builtin",
    proto = ":builtin_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "builtin",
    embed = [":builtin_go_proto"],
    importpath = "github.com/ldx/bep2prom/pkg/bazel_protobuf/builtin",
    visibility = ["//visibility:public"],
)
