load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "command_line_proto",
    srcs = ["command_line.proto"],
    visibility = ["//visibility:public"],
    deps = ["//pkg/bazel_protobuf/option_filters:options_proto"],
)

go_proto_library(
    name = "command_line_go_proto",
    importpath = "github.com/ldx/bep2prom/pkg/bazel_protobuf/command_line",
    proto = ":command_line_proto",
    visibility = ["//visibility:public"],
    deps = ["//pkg/bazel_protobuf/option_filters"],
)

go_library(
    name = "command_line",
    embed = [":command_line_go_proto"],
    importpath = "github.com/ldx/bep2prom/pkg/bazel_protobuf/command_line",
    visibility = ["//visibility:public"],
)
