load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "command_server_proto",
    srcs = ["command_server.proto"],
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/bazel_protobuf/failure_details:failure_details_proto",
        "@com_google_protobuf//:any_proto",
    ],
)

go_proto_library(
    name = "command_server_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/ldx/bep2prom/pkg/bazel_protobuf/command_server",
    proto = ":command_server_proto",
    visibility = ["//visibility:public"],
    deps = ["//pkg/bazel_protobuf/failure_details"],
)

go_library(
    name = "command_server",
    embed = [":command_server_go_proto"],
    importpath = "github.com/ldx/bep2prom/pkg/bazel_protobuf/command_server",
    visibility = ["//visibility:public"],
)
