load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "com_google_devtools_build_lib_view_config_crosstool_proto",
    srcs = ["crosstool_config.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "com_google_devtools_build_lib_view_config_crosstool_go_proto",
    importpath = "github.com/ldx/bep2prom/pkg/bazel_protobuf/crosstool_config",
    proto = ":com_google_devtools_build_lib_view_config_crosstool_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "crosstool_config",
    embed = [":com_google_devtools_build_lib_view_config_crosstool_go_proto"],
    importpath = "github.com/ldx/bep2prom/pkg/bazel_protobuf/crosstool_config",
    visibility = ["//visibility:public"],
)
