load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "bazel_tools_desugar_proto",
    srcs = ["desugar_deps.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "bazel_tools_desugar_go_proto",
    importpath = "github.com/ldx/bep2prom/pkg/bazel_protobuf/desugar_deps",
    proto = ":bazel_tools_desugar_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "desugar_deps",
    embed = [":bazel_tools_desugar_go_proto"],
    importpath = "github.com/ldx/bep2prom/pkg/bazel_protobuf/desugar_deps",
    visibility = ["//visibility:public"],
)
