load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "tools_protos_proto",
    srcs = ["execution_statistics.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "tools_protos_go_proto",
    importpath = "github.com/ldx/bep2prom/pkg/bazel_protobuf/execution_statistics",
    proto = ":tools_protos_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "execution_statistics",
    embed = [":tools_protos_go_proto"],
    importpath = "github.com/ldx/bep2prom/pkg/bazel_protobuf/execution_statistics",
    visibility = ["//visibility:public"],
)
