load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "blaze_invocation_policy_proto",
    srcs = ["invocation_policy.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "blaze_invocation_policy_go_proto",
    importpath = "github.com/ldx/bep2prom/pkg/bazel_protobuf/invocation_policy",
    proto = ":blaze_invocation_policy_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "invocation_policy",
    embed = [":blaze_invocation_policy_go_proto"],
    importpath = "github.com/ldx/bep2prom/pkg/bazel_protobuf/invocation_policy",
    visibility = ["//visibility:public"],
)
