load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "options_proto",
    srcs = ["option_filters.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "options_go_proto",
    importpath = "github.com/ldx/bep2prom/pkg/bazel_protobuf/option_filters",
    proto = ":options_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "option_filters",
    embed = [":options_go_proto"],
    importpath = "github.com/ldx/bep2prom/pkg/bazel_protobuf/option_filters",
    visibility = ["//visibility:public"],
)
