load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "tools_protos_proto",
    srcs = ["spawn.proto"],
    visibility = ["//visibility:public"],
    deps = ["@com_google_protobuf//:duration_proto"],
)

go_proto_library(
    name = "tools_protos_go_proto",
    importpath = "github.com/ldx/bep2prom/pkg/bazel_protobuf/spawn",
    proto = ":tools_protos_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "spawn",
    embed = [":tools_protos_go_proto"],
    importpath = "github.com/ldx/bep2prom/pkg/bazel_protobuf/spawn",
    visibility = ["//visibility:public"],
)
