load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "blaze_worker_proto",
    srcs = ["worker_protocol.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "blaze_worker_go_proto",
    importpath = "github.com/ldx/bep2prom/pkg/bazel_protobuf/worker_protocol",
    proto = ":blaze_worker_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "worker_protocol",
    embed = [":blaze_worker_go_proto"],
    importpath = "github.com/ldx/bep2prom/pkg/bazel_protobuf/worker_protocol",
    visibility = ["//visibility:public"],
)
