load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "xcode_config_proto",
    srcs = ["xcode_config.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "xcode_config_go_proto",
    importpath = "github.com/ldx/bep2prom/pkg/bazel_protobuf/xcode_config",
    proto = ":xcode_config_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "xcode_config",
    embed = [":xcode_config_go_proto"],
    importpath = "github.com/ldx/bep2prom/pkg/bazel_protobuf/xcode_config",
    visibility = ["//visibility:public"],
)
